2014-07-22 John Wu <John dot Wu at ACM dot org>
	* src/column.h, src/column.cpp: remove the check for nil data file
	name from column::selectValues because the underlying
	implementation actually deal with the case correctly previous, the
	recent changes were incorrect

2014-07-20 John Wu <John dot Wu at ACM dot org>
	* src/column.h, src/column.cpp: add member variable dataflag

2014-07-18 John Wu <John dot Wu at ACM dot org>
	* examples/tiapi.c: update to work with index only data column

2014-07-17 John Wu <John dot Wu at ACM dot org>
	* src/bord.h, src/bord.cpp: add new constructor to
	ibis::bord::column to accept data through FastBitReadExtArray
	* src/column.h: rename writeIndex to indexWrite, rename
	serialSizes to indexSerialSizes

2014-07-16 John Wu <John dot Wu at ACM dot org>
	* src/const.h: rename FastBitReadIntArray to FastBitReadBitmaps

2014-07-15 John Wu <John dot Wu at ACM dot org>
	* src/const.h: add FastBitReadExtArray as the generic function
	propotype for reading external data

2014-07-07 John Wu <John dot Wu at ACM dot org>
	* src/iapi.h: clearify the fact that the bitmap keys and offsets
	are used by FastBit data structures and therefore can not be freed
	by the caller until fastbit_iapi_free_all is called -- fixing a
	logical error in tiapi.c related to freeing keys and offsets
	prematurely

2014-06-29 John Wu <John dot Wu at ACM dot org>
	* src/ibin.h, src/irelic.h: add column object to the new
	constructors for ibis::bin and ibis::relic in order to set nrows
	* src/column.cpp: update attachIndex to use the new construtors
	* src/index.cpp: in the copy constructor, need to copy each
	bitvector in bits

2014-06-28 John Wu <John dot Wu at ACM dot org>
	* src/index.h: add virtual function dup to ibis::index class
	hierarchy, add copy constructors
	* src/column.cpp: in the copy constructor of ibis::column, invoke
	ibis::index::dup to copy the index when present
	* src/column.h: add function ibis::column::nRows()